# AI-based-scheduler

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  train.py
checkpoints/: dqn_ep100.pth  dqn_ep200.pth  dqn_ep300.pth  dqn_ep400.pth  dqn_final.pth
runs/DQN_StageA_1778052390/: events.out.tfevents.1778052390.duy.19864.0
runs/DQN_StageA_1778641754/: events.out.tfevents.1778641754.duy.16767.0
src/scheduler/: config.py  dqn_agent.py  q_network.py  replay_buffer.py  stub_env.py
tests/: test_model.py  test_smoke.py  test_stub_env.py
