[project]
name = "ai-based-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12" # Keeps the Python version below 3.12
dependencies = [
    "config>=0.5.1",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
