[project]
name = "ai-based-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12" # Keeps the Python version below 3.12
dependencies = [
    "config>=0.5.1",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytest-html>=4.2.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--junit-xml=logs/test_results.xml",
    "--html=logs/test_report.html",        # ← human-readable report
    "--self-contained-html",               # ← single file, no external CSS deps
    "--tb=short",
    "-v",
]
